--- a/app/views/user/users/_info.html.erb
+++ b/app/views/user/users/_info.html.erb
@@ -1,7 +1,56 @@
+  <div class="col-md-3">
+    <h2>User info</h2>
+    <div>
+      <%= image_tag user.get_profile_image(100,100) %>
+    </div>
 
-<!--ゲストユーザー用a編集ボタンを非表示-->
-<% unless user.guest_user? %>
-<div class="row">
-  <%= link_to "",edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
-</div>
-<% end %>
+    <table>
+      <tr>
+        <th>name</th>
+        <th><%= user.name %></th>
+      </tr>
+      <tr>
+        <th>introduction</th>
+        <th><%= user.introduction %></th>
+      </tr>
+      <!--フォロー数、フォロワー数-->
+      <tr>
+        <th>follows</th>
+        <th>
+          <%= link_to user_followings_path(user) do %>
+            <%= user.followings.count %>
+          <% end %>
+        </th>
+      </tr>
+      <tr>
+        <th>followers</th>
+        <th>
+          <%= link_to user_followers_path(user) do %>
+            <%= user.followers.count %>
+          <% end %>
+        </th>
+      </tr>
+    </table>
+    <% if user==current_user %>
+    <div class="row">
+      <%=link_to edit_user_path(user), class: 'btn btn-outline-secondary btn-block' do %>
+      <i class="fas fa-user-cog"></i>
+      <% end %>
+    </div>
+    <% else %>
+    <div class='row' >
+      <% if current_user.following?(user) %>
+        <%= link_to "フォローを外す", user_relationships_path(user.id), class: "btn btn-info btn-sm", method: :delete %>
+      <% else %>
+        <%= link_to "フォローをする", user_relationships_path(user.id), class: "btn btn-success btn-sm", method: :post %>
+      <% end %>
+      <!--DM機能-->
+        
+    </div>
+    <% end %>
+    <!--ゲストユーザー用a編集ボタンを非表示-->
+    <% unless user.guest_user? %>
+    <div class="row">
+      <%= link_to "",edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+    </div>
+    <% end %>
