--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,29 +1,37 @@
-<h2>Sign up</h2>
+<div class="container justify-content-center">
+  <h3 class="m-3"><strong>新規登録</strong></h3>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "user/shared/error_messages", resource: resource %>
+  <%= form_with model: @user, url: user_registration_path do |f| %>
+    <%= render "user/shared/error_messages", resource: resource %>
+  <table class="table table-center col-6">
+    <tr>
+      <td><%= f.label :名前 %></td>
+      <td><%= f.text_field :name, autofocus: true, autocomplete: "name" %></td>
+    </tr>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <tr>
+      <td><%= f.label :メールアドレス %></td>
+      <td><%= f.email_field :email, autofocus:true, autocomplete: "email" %></td>
+    </tr>
+
+    <tr>
+      <td><%= f.label :パスワード %>
+        <% if @minimum_password_length %>
+        (<%= @minimum_password_length %>文字以上)
+        <% end %></td>
+      <td><%= f.password_field :password, autocomplete: "new-password" %></td>
+    </tr>
+
+    <tr>
+      <td><%= f.label :パスワード確認 %></td>
+      <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+    </tr>
+  </table>
+  <div class="actions m-3">
+    <%= f.submit "新規登録", class:"btn btn-success" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "user/shared/links" %>
+  <% end %>
+  <h3><strong>既に登録済みの方</strong></h3>
+  <%= render "user/shared/links" %>からログインしてください
+</div>
