--- a/app/views/admin/games/show.html.erb
+++ b/app/views/admin/games/show.html.erb
@@ -16,17 +16,18 @@
         </tr>
         <tr>
           <th>プラットフォーム</th>
-          <th><%= @game.genre.pratform %></th>
+          <th><% @game.genres.each do |genre| %>
+              <%= genre.pratform %>
+              <% end %></th>
         </tr>
       </table>
     </div>
-  </div>
-  
+
     <div class="col-md-8 offset-md-1">
       <h2>投稿</h2>
       <table>
         <tbody>
-          <% game.comments.each do |comment| %>
+          <% @game.comments.each do |comment| %>
           <tr>
             <td>
               <%= link_to admin_user_path(comment.user) do %>
