--- a/app/views/admin/games/show.html.erb
+++ b/app/views/admin/games/show.html.erb
@@ -21,6 +21,11 @@
               <% end %></th>
         </tr>
       </table>
+      <div class="row">
+          <%=link_to edit_admin_game_path(@game), class: 'btn btn-outline-secondary btn-block' do %>
+            <i class="fas fa-cog"></i>
+          <%end%>
+      </div>
     </div>
 
     <div class="col-md-8 offset-md-1">
