--- a/app/views/admin/games/edit.html.erb
+++ b/app/views/admin/games/edit.html.erb
@@ -12,13 +12,13 @@
             <tr>
               <td>イメージ画像</td>
               <td>
-                <%= f.file_field :image, accept: "image/*" %>
+                <%= f.file_field :game_image, accept: "image/*" %>
               </td>
             </tr>
             <tr>
               <td>タイトル</td>
               <td>
-                <%= f.text_field :name, rows:'3', placeholder: "商品名" %>
+                <%= f.text_field :title, rows:'3', placeholder: "商品名" %>
               </td>
             </tr>
             <tr>
@@ -31,9 +31,9 @@
               <td>プラットフォーム</td>
               <td>
                 <% @genres.each do |genre| %>
-                    <%= f.check_box :pratform,
+                    <%= f.check_box :genre_ids,
                                     { multiple: true,
-                                      checked: @game.genre.present? ? @game.genre.split(",").include?(genre) : false },
+                                      checked: @game.genres.present? ? @game.genres.split(",").include?(genre) : false },
                                       genre, nil %>
             　　      <%= f.label genre.pratform %><br>
                   <% end %>
