--- a/app/views/admin/games/new.html.erb
+++ b/app/views/admin/games/new.html.erb
@@ -12,7 +12,7 @@
               <tr>
                 <td>イメージ画像</td>
                 <td>
-              　  <%= f.file_field :image, accept: "image/*" %>
+              　  <%= f.file_field :game_image, accept: "image/*" %>
                 </td>
               </tr>
               <tr>
