ユーザー側詳細、一覧画面

--- a/app/views/admin/games/edit.html.erb
+++ b/app/views/admin/games/edit.html.erb
@@ -31,12 +31,12 @@
               <td>プラットフォーム</td>
               <td>
                 <% @genres.each do |genre| %>
-                    <%= f.check_box :genre_ids,
-                                    { multiple: true,
-                                      checked: @game.genres.present? ? @game.genres.split(",").include?(genre) : false },
-                                      genre, nil %>
-            　　      <%= f.label genre.pratform %><br>
-                  <% end %>
+                  <%= f.check_box :genre_ids,
+                                  { multiple: true,
+                                    checked: @game.genres.present? ? @game.genres.split(",").include?(genre) : false },
+                                    genre.id, nil %>
+          　　      <%= f.label genre.pratform %><br>
+                <% end %>
               </td>
             </tr>
             <tr>
