--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
             <% if user_signed_in? %>
               <li>
                 <%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
-                  <i class="fas fa-home"></i>Home
+                  <i class="fas fa-user"></i>Myself
                 <% end %>
               </li>
               <li>
