--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -13,34 +13,48 @@
         </ul>
       <%end%>
       </div>
-      
-      <%= form_with model:@user do |f| %>
-      <div>
-        <label for="inputImage">Image</label>
-        <%= f.file_field :profile_image,placeholder:"プロフィール画像",accept:"image/*" %>
-      </div>
-      <div>
-        <label for="inputName">Name</label>
-        <%= f.text_field :name, autofocus:true,id:"inputName",placeholder:"名前" %>
-      </div>
-      <div>
-        <label for="inputIntroduction">Introduction</label>
-        <%= f.text_field :introduction, autofocus:true,id:"inputIntroduction" %>
-      </div>
-      <div>
-        <label>プラットフォーム</label>
-          <% @genres.each do |genre| %>
-            <%= f.check_box :pratform,
-                            { multiple: true,
-                              checked: @game.genre.present? ? @game.genre.split(",").include?(genre) : false },
-                              genre, nil %>
-            <%= f.label genre.pratform %><br>
-          <% end %>
-      </div>
-      <div>
-        <%= f.submit "変更を保存",class: "btn btn-secondary" %>
-      </div>
-      <%end%>
+
+      <%= form_with model:@user,url:user_path, method: :patch do |f| %>
+        <table>
+          <tbody>
+            <tr>
+              <td>イメージ画像</td>
+              <td>
+                <%= f.file_field :profile_image, accept: "image/*" %>
+              </td>
+            </tr>
+            <tr>
+              <td>名前</td>
+              <td>
+                <%= f.text_field :name, rows:'3', placeholder: "商品名" %>
+              </td>
+            </tr>
+            <tr>
+              <td>紹介文</td>
+              <td>
+                <%= f.text_area :introduction, rows:'6', placeholder: "紹介文"  %>
+              </td>
+            </tr>
+            <tr>
+              <td>プラットフォーム</td>
+              <td>
+                <% @genres.each do |genre| %>
+                  <%= f.check_box :genre_ids,
+                                  { multiple: true,
+                                    checked: @user.genres.present? ? @user.genres.split(",").include?(genre) : false },
+                                    genre.id, nil %>
+          　　      <%= f.label genre.pratform %><br>
+                <% end %>
+              </td>
+            </tr>
+            <tr>
+              <td>
+              <%= f.submit "変更を保存",class: "btn btn-success" %>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      <% end %>
     </div>
   </div>
 </div>
