--- a/app/views/admin/games/show.html.erb
+++ b/app/views/admin/games/show.html.erb
@@ -41,6 +41,9 @@
               <%end%>
             </td>
             <td><%= comment.comment %></td>
+            <td>
+              <%= link_to "削除", game_comment_path(game, comment), method: :delete,"data-confirm"=>"本当に消しますか？", class:"btn btn-sm btn-danger",remote: true %>
+            </td>
           </tr>
           <%end%>
         </tbody>
