--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -51,7 +51,7 @@
             </td>
             <td><%= comment.comment %></td>
             <td>
-              <%= link_to "Destroy", game_comment_path(game, game_comment), method: :delete,"data-confirm"=>"本当に消しますか？", class:"btn btn-sm btn-danger",remote: true %>
+              <%= link_to "削除", game_comment_path(game, game_comment), method: :delete,"data-confirm"=>"本当に消しますか？", class:"btn btn-sm btn-danger",remote: true %>
             </td>
           </tr>
           <%end%>
