--- a/app/views/user/comments/_index.html.erb
+++ b/app/views/user/comments/_index.html.erb
@@ -11,7 +11,7 @@
       <td><%= comment.comment %></td>
       <td>
         <% if comment.user==current_user %>
-          <%= link_to "Destroy", game_comment_path(game, comment), method: :delete,"data-confirm"=>"本当に消しますか？", class:"btn btn-sm btn-danger",remote: true %>
+          <%= link_to "削除", game_comment_path(game, comment), method: :delete,"data-confirm"=>"本当に消しますか？", class:"btn btn-sm btn-danger",remote: true %>
         <%end%>
       </td>
     </tr>
