--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -38,6 +38,7 @@
           </th>
         </tr>
       </table>
+      <!--ゲストユーザー用編集ボタンを非表示-->
       <% if @user.guest_user? %>
         <div></div>
       <% elsif @user==current_user %>
@@ -70,13 +71,6 @@
           <% end %>
       </div>
       <%end%>
-      <!--ゲストユーザー用a編集ボタンを非表示-->
-      <% if @user.guest_user? %>
-      <div class="row">
-        <%= link_to "",edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{@user.id}" %>
-      </div>
-      <% end %>
-
 
   </div>
     <div class="col-md-8 offset-md-1">
