--- a/app/views/user/games/index.html.erb
+++ b/app/views/user/games/index.html.erb
@@ -2,6 +2,7 @@
   <div class='row'>
     <%=render 'user/users/info',user: current_user %>
     <div class="col-md-8 offset-md-1">
+      <%= render 'layouts/search' %>
       <h2>Games</h2>
       <table class='table'>
         <thead>
