--- a/app/views/user/games/show.html.erb
+++ b/app/views/user/games/show.html.erb
@@ -30,7 +30,7 @@
 
     <div class="col-md-8 offset-md-1">
       <h2>投稿</h2>
-      <div id="comment_index">
+      <div id="comments_index">
         <%= render "user/comments/index", game: @game %>
       </div>
       <%= render "user/comments/form", game: @game, comment: @comment %>
