--- a/app/views/admin/games/index.html.erb
+++ b/app/views/admin/games/index.html.erb
@@ -3,6 +3,7 @@
     <div class="col">
       <h4 class="m-3">ゲーム一覧</h4>
     </div>
+    <%= render 'layouts/search' %>
     <!--ゲーム新規登録ボタン-->
     <div class="col text-right m-3">
       <%= link_to "+", new_admin_game_path, class:"btn btn-success" %>
