--- a/app/views/admin/games/show.html.erb
+++ b/app/views/admin/games/show.html.erb
@@ -42,7 +42,7 @@
             </td>
             <td><%= comment.comment %></td>
             <td>
-              <%= link_to "削除", game_comment_path(game, comment), method: :delete,"data-confirm"=>"本当に消しますか？", class:"btn btn-sm btn-danger",remote: true %>
+              <%= link_to "削除", admin_user_comment_path(@game, comment), method: :delete,"data-confirm"=>"本当に消しますか？", class:"btn btn-sm btn-danger",remote: true %>
             </td>
           </tr>
           <%end%>
