--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col">
       <h4 class="m-3">会員一覧</h4>
+      <%= render 'layouts/search' %>
         <table class="table table-hover">
           <thead>
             <tr class="table-secondary">
@@ -14,7 +15,7 @@
           <% @users.each do |user| %>
             <tr>
               <td><%= user.id %></td>
-              <td><%= link_to user.name, admin_user_path(user) %></td>
+              <td><%= link_to user.name, admin_user_path(user),data: {"turbolinks"=>false} %></td>
               <td><%= user.email %></td>
               <td>
                 <% if user.is_active %>
