--- a/app/views/user/comments/_nice.html.erb
+++ b/app/views/user/comments/_nice.html.erb
@@ -1,9 +1,9 @@
 <% if comment.niced_by?(current_user) %>
-  <%= link_to comment_nices_path(comment),method: :delete, remote: true do %>
+  <%= link_to game_comment_nices_path(comment.game,comment),method: :delete, remote: true do %>
     <i class="fas fa-thumbs-up" style="color:red;"></i><%= comment.nices.count %>
   <% end %>
 <% else %>
-  <%= link_to comment_nices_path(comment),method: :post, remote: true do %>
+  <%= link_to game_comment_nices_path(comment.game,comment),method: :post, remote: true do %>
     <i class="far fa-thumbs-up" style="color:blue;"></i><%= comment.nices.count %>
   <% end %>
 <% end %>
