--- a/app/views/user/users/index.html.erb
+++ b/app/views/user/users/index.html.erb
@@ -2,6 +2,7 @@
   <div class='row'>
     <%=render 'info',user: @user %>
     <div class="col-md-8 offset-md-1">
+      <%= render 'layouts/search' %>
       <h2>Users</h2>
       <%= render 'index',users: @users %>
     </div>
