--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,64 +1,52 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-lg-3">
       <h2>プロフィール</h2>
-      <div>
-        <%= image_tag @user.get_profile_image(100,100) %>
+      <div class="card d-flex justify-content-center" style="width: 20rem; outline-width: 20px;">
+        <div class="text-center">
+          <%= image_tag @user.get_profile_image(100,100), style: 'border-radius: 50%' %>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title"><%= @user.name %></h5>
+          <p class="card-text"><%= @user.introduction %></p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">プラットフォーム
+          <p><% @user.genres.each do |genre| %>
+                      <%= genre.pratform %>
+                    <% end %></p></li>
+          <li class="list-group-item">
+            フォロー  : <%= link_to user_followings_path(@user) do %>
+                          <%= @user.followings.count %>
+                        <%end%></li>
+          <li class="list-group-item">
+            フォロワー: <%= link_to user_followers_path(@user) do %>
+                          <%= @user.followers.count %>
+                        <%end%></li>
+        </ul>
+        <div class="card-body">
+          <% if @user.guest_user? %>
+            <div></div>
+          <% elsif @user==current_user %>
+            <div class="row">
+              <%=link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
+                <i class="fas fa-user-cog"></i>
+             <%end%>
+            </div>
+          <%else%>
+            <div class='row' >
+            <!--フォローボタン-->
+              <div id="relationship_btns_<%= @user.id %>"><%= render 'user/relationships/btn', user: @user %></div>
+            <!--チャットボタン-->
+              <% if current_user != @user && current_user.following?(@user) && @user.following?(current_user) %>
+                <%= link_to message_path(@user.id), class: "btn btn-success ml-3" do %>
+                  <i class="far fa-comments"></i>
+                <% end %>
+              <% end %>
+            </div>
+          <%end%>
+        </div>
       </div>
-      <table>
-        <tr>
-          <th>名前</th>
-          <th><%= @user.name %></th>
-        </tr>
-        <tr>
-          <th>紹介文</th>
-          <th><%= @user.introduction %></th>
-        </tr>
-        <tr>
-          <th>プラットフォーム</th>
-          <th><% @user.genres.each do |genre| %>
-              <%= genre.pratform %>
-              <% end %></th>
-        </tr>
-      <!--フォロー数、フォロワー数-->
-        <tr>
-          <th>follows</th>
-          <th>
-            <%= link_to user_followings_path(@user) do %>
-              <%= @user.followings.count %>
-            <%end%>
-          </th>
-        </tr>
-        <tr>
-          <th>followers</th>
-          <th>
-            <%= link_to user_followers_path(@user) do %>
-              <%= @user.followers.count %>
-            <%end%>
-          </th>
-        </tr>
-      </table>
-      <!--ゲストユーザー用編集ボタンを非表示-->
-      <% if @user.guest_user? %>
-        <div></div>
-      <% elsif @user==current_user %>
-        <div class="row">
-          <%=link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block' do %>
-            <i class="fas fa-user-cog"></i>
-         <%end%>
-        </div>
-      <%else%>
-        <div class='row' >
-        <!--フォローボタン-->
-          <div id="relationship_btns_<%= @user.id %>"><%= render 'user/relationships/btn', user: @user %></div>
-        <!--チャットボタン-->
-          <% if current_user != @user && current_user.following?(@user) && @user.following?(current_user) %>
-            <%= link_to message_path(@user.id), class: "btn btn-success ml-3" do %>
-              <i class="far fa-comments"></i>
-            <% end %>
-          <% end %>
-        </div>
-      <%end%>
 
   </div>
     <div class="col-md-8 offset-md-1">
