--- a/app/views/user/comments/_index.html.erb
+++ b/app/views/user/comments/_index.html.erb
@@ -11,7 +11,8 @@
 
   <div class="col-9">
     <%= comment.created_at.strftime('%Y/%m/%d %H:%M:%S') %><br>
-    <%= comment.comment %>
+    <!--改行できるようにした-->
+    <%= safe_join(comment.comment.split("\n"),tag(:br))%>
   <div>
     <div>
     <% if comment.user==current_user %>
