--- a/app/views/user/messages/_message.html.erb
+++ b/app/views/user/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="right-container d-flex justify-content-end">
+<div class="left-container d-flex p-2">
+  <%= image_tag message.user.get_profile_image(50,50), style: 'border-radius: 50%' %>
   <p id="message_<%= message.id %>" style="background-color: rgba(0, 185, 0, 0.6); padding: 5px; border-radius: 10px; "><%= message.message %></p>
-  <%= button_to "削除", message_path(message), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger btn-sm ml-2", remote: true, id: "delete_message_#{message.id}" %>
 </div>
