--- a/app/views/user/messages/show.html.erb
+++ b/app/views/user/messages/show.html.erb
@@ -1,3 +1,4 @@
+<div class="col-md-8 offset-md-2">
 <h2 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>"><%= @user.name %> さんとのチャット</h2>
 
 <div class="message" style="width: 400px;">
@@ -5,9 +6,9 @@
     <% if message.user_id == current_user.id %>
       <%= render "user/messages/message", message: message %>
     <% else %>
-      <div class="left-container d-flex">
+      <div class="right-container d-flex justify-content-end p-2">
+        <p class=ml-1 style="text-align: right;"><span style="background-color: #F5F5DC; padding: 5px; border-radius: 10px;"><%= message.message %></span></p>
         <%= image_tag @user.get_profile_image(50,50), style: 'border-radius: 50%' %>
-        <p class=ml-1 style="text-align: left;"><span style="background-color: #F5F5DC; padding: 5px; border-radius: 10px;"><%= message.message %></span></p>
       </div>
     <% end %>
   <% end %>
@@ -18,3 +19,4 @@
   <%= f.submit "送信", class: "btn btn-dark btn-sm" %>
   <%= f.hidden_field :room_id %>
 <% end %>
+</div>
