--- a/app/views/user/users/_info.html.erb
+++ b/app/views/user/users/_info.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="card-body">
       <h5 class="card-title"><%= user.name %></h5>
-      <p class="card-text"><%= user.introduction %></p>
+      <p class="card-text"><%=safe_join(user.introduction.split("\n"),tag(:br))%></p>
     </div>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">プラットフォーム
